Change body message

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -201,5 +201,5 @@ en:
       title: Driver has arrived at your pick-up location
       body: "Driver has arrived at your pick-up location in %{color} %{make} %{model} (%{plate_no})."
     driver_face_verified:
-      title: Driver face verified
-      body: "driver_face_detection"
+      title: Driver face verification
+      body: "Please verify your driver"
